agregue unas cositas

--- a/index.html
+++ b/index.html
@@ -2,28 +2,55 @@
 <html>
  <head>
     <metacharset="utf-8">
-    <!--texto lol-->
+
+    <!--esto no se renderiza ya que es un comentario,
+     y lo q esta en head tampoco amenos q sea un title-->
+
     <meta name="viewport" content="width=device-widht">
+
 <title> practica cesar </title>
+
+<meta property = "og:title" content="cesar">
+
+<link rel="stylesheet" href="imagenes/linux_os_logo_icon_134670.webp">
+<STYLE>
+    body{
+    background: rgba(114, 58, 100, 0.432);
+} </STYLE>
+
+
+
 </head>
 
 
 <body>
-<p>hola soy cesar y tengo <strong>16 años</strong>, vivo con mi madre y odio los <strong>PINGUINOS</strong></p>
-<h2>pinguino gay abajo☻</h2>
+<h1>avistamientos de pinguinos gay</h1>
+    <h2>pinguino gay abajo!!!</h2>
+    <H1>DISCRECION SON IMAGENES FUERTES!</H1>
 <img
 width=350
 height = 350
 title="pato gay" 
 alt="imagen de linux"
 src="imagenes/linux_os_logo_icon_134670.webp">
+<HEADER></HEADER>
+<h2>preguntas de la audiencia  </h2>
 
+<H3> 😱:pq los pinguinos son gays ?:</H3>
 
-<UL>
-    <li class="items">hola</li>
-    <li class="items">como </li>
-    <li class="items">estas</li>
-    
-</UL>
+<HEADER><P>esto se debe ya que los pinguinos desde una corta edad comienzan 
+a chupar <strong>penes</strong> . Desde ese momento no pueden controlar
+sus deseos de volver a hacerlo.</P>
+    <small>es muy triste para ellos...</small>
+
+    <h3>🥵:donde se encuentran estos pinguinos afectados</h3>
+
+    <p>estos pinguinos se encuentran en paises como 
+    venezuela mayormente valencia ,la concentracion de pinguinos gay
+     en el estado
+     se debe a que los valencianos los criaban y fomentaron
+    actividades <strong>homosexuales</strong> desde su corta edad. </p></header>
+    <small>eso es lamentable para nosotros...</small>
+</HEADER>
 </body>
 </html>
