hice cambios , apunto de finalizar html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-widht">
 
-<title> practica cesar </title>
+<title> patogay </title>
 
 <meta property = "og:title" content="cesar">
 
@@ -19,38 +19,81 @@
 } </STYLE>
 
 
-
 </head>
 
 
 <body>
+
+    <nav>
+
+<a href="imagenes/linux_os_logo_icon_134670.webp"> avistamiento de pinguino gay</a>
+<br>
+<a href="#preguntas de la audiencia">ver preguntas </a>
+<br>
+<a href="https://www.youtube.com"
+target="_blank"
+rel="noreferrer"> canal de youtube</a>
+
+
+    </nav>
+
+
+
 <h1>avistamientos de pinguinos gay</h1>
-    <h2>pinguino gay abajo!!!</h2>
-    <H1>DISCRECION SON IMAGENES FUERTES!</H1>
+<h2>pinguino gay abajo!!!</h2>
+<br>
+<H1>DISCRECION SON IMAGENES FUERTES!</H1>
+    
+
 <img
 width=350
 height = 350
 title="pato gay" 
 alt="imagen de linux"
 src="imagenes/linux_os_logo_icon_134670.webp">
-<HEADER></HEADER>
-<h2>preguntas de la audiencia  </h2>
+
+
+<section id="preguntas de la audiencia"></section>
+<h2>preguntas de la audiencia</h2>
+
+
+
 
 <H3> 😱:pq los pinguinos son gays ?:</H3>
-
 <HEADER><P>esto se debe ya que los pinguinos desde una corta edad comienzan 
 a chupar <strong>penes</strong> . Desde ese momento no pueden controlar
 sus deseos de volver a hacerlo.</P>
     <small>es muy triste para ellos...</small>
 
-    <h3>🥵:donde se encuentran estos pinguinos afectados</h3>
 
-    <p>estos pinguinos se encuentran en paises como 
-    venezuela mayormente valencia ,la concentracion de pinguinos gay
-     en el estado
-     se debe a que los valencianos los criaban y fomentaron
-    actividades <strong>homosexuales</strong> desde su corta edad. </p></header>
-    <small>eso es lamentable para nosotros...</small>
+<h3>🥵:donde se encuentran estos pinguinos afectados</h3>
+
+<p>estos pinguinos se encuentran en paises como 
+venezuela mayormente valencia ,la concentracion de pinguinos gay
+ en el estado
+ se debe a que los valencianos los criaban y fomentaron
+actividades <strong>homosexuales</strong> desde su corta edad. </p></header>
+<small>eso es lamentable para nosotros...</small>
+<br><br><br>
+<footer>
+
+    <a href="mailto: cesarh2206@gmail.com">enviar correo</a>
+
+</footer>
+<section>
+<br><br><br>
+<form method="post" action="/">
+    <fieldset>
+        <legend>
+            <p>informacion personal</p>
+        </legend>
+    </fieldset>
+</form>
+
+
+</form>
+
+</section>
 </HEADER>
 </body>
 </html>
