cambios en la estructura

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <link rel="stylesheet" href="imagenes/linux_os_logo_icon_134670.webp">
 <STYLE>
-    body{
-    background: rgba(114, 58, 100, 0.432);
-} </STYLE>
+    body
+    { background: rgba(114, 58, 100, 0.432);
+    } </STYLE>
 
 
 </head>
@@ -26,13 +26,13 @@
 
     <nav>
 
-<a href="imagenes/linux_os_logo_icon_134670.webp"> avistamiento de pinguino gay</a>
+<a href="imagenes/Gay Pride Penguin Sticker.jpg" >Avistamiento de pinguino gay</a>
 <br>
-<a href="#preguntas de la audiencia">ver preguntas </a>
+<a href="#preguntas de la audiencia">Ver preguntas </a>
 <br>
 <a href="https://www.youtube.com"
 target="_blank"
-rel="noreferrer"> canal de youtube</a>
+rel="noreferrer"> Canal de youtube</a>
 
 
     </nav>
@@ -40,8 +40,34 @@ rel="noreferrer"> canal de youtube</a>
 
 
 <h1>avistamientos de pinguinos gay</h1>
-<h2>pinguino gay abajo!!!</h2>
+
 <br>
+
+<details>
+    <summary><strong> Como evitar la enfermedad</strong></summary>
+        <p>esta enfermedad se puede evitar :
+            <ul>
+<li>lavandose las manos despues de tocar pinguinos</li>
+<li>evitando encuentros directos con pinguinos</li>
+<li>NO juntarse con valencianos</li>
+
+            </ul>
+        </p>
+</details>
+
+<details>
+    <summary>
+        <strong>como eliminar la enfermedad</strong>
+</summary>
+<p>esta enfermedad por ahora no tiene ninguna cura , 
+el metodo de eliminacion seria quemar a los pinguinos.
+</p>
+</details>
+
+<h2>pinguino gay abajo!!!</h2>
+
+<br>
+
 <H1>DISCRECION SON IMAGENES FUERTES!</H1>
     
 
@@ -54,6 +80,7 @@ src="imagenes/linux_os_logo_icon_134670.webp">
 
 
 <section id="preguntas de la audiencia"></section>
+
 <h2>preguntas de la audiencia</h2>
 
 
@@ -74,6 +101,7 @@ venezuela mayormente valencia ,la concentracion de pinguinos gay
  se debe a que los valencianos los criaban y fomentaron
 actividades <strong>homosexuales</strong> desde su corta edad. </p></header>
 <small>eso es lamentable para nosotros...</small>
+
 <br><br><br>
 <footer>
 
@@ -82,17 +110,51 @@ actividades <strong>homosexuales</strong> desde su corta edad. </p></header>
 </footer>
 <section>
 <br><br><br>
-<form method="post" action="/">
+<form method="post"
+ action="/">
     <fieldset>
         <legend>
             <p>informacion personal</p>
         </legend>
-    </fieldset>
-</form>
-
 
 </form>
+<label>
 
+Nombre : 
+<input 
+type="name" 
+Nombre="Nombre" 
+placeholder="cesar hernandez "
+required>
+<br>
+Email : 
+<input 
+type="email" 
+Nombre="Nombre" 
+placeholder="cesarh2206@gmail.com "
+required>
+
+<br><br>
+
+<fieldset>
+<legend>
+    <div>
+        <label> Telefono:
+            <input type="tel"
+            name="phone"
+            placeholder="0414 --- ---"
+            required>
+        </label>
+    </div>
+</legend>
+</fieldset>
+<input type="submit" value="enviar mensaje">
+
+
+
+
+
+</fieldset>
 </section>
 </HEADER>
 </body>
