curso de html finalizado

--- a/index.html
+++ b/index.html
@@ -41,9 +41,25 @@ rel="noreferrer"> Canal de youtube</a>
 
 <h1>avistamientos de pinguinos gay</h1>
 
-<br>
+<video 
+ autoplay
+ muted 
+src="dawd"></video>
+</video>
+
+
+<iframe 
+aspectratio="16:9"
+width="560" 
+height="315"
+ src="https://www.youtube.com/embed/n4-J-PYifXE?si=p4P3_WzfaLmf0Fl6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
 
 <details>
+
     <summary><strong> Como evitar la enfermedad</strong></summary>
         <p>esta enfermedad se puede evitar :
             <ul>
@@ -55,6 +71,7 @@ rel="noreferrer"> Canal de youtube</a>
         </p>
 </details>
 
+
 <details>
     <summary>
         <strong>como eliminar la enfermedad</strong>
@@ -63,7 +80,7 @@ rel="noreferrer"> Canal de youtube</a>
 el metodo de eliminacion seria quemar a los pinguinos.
 </p>
 </details>
-
+</div>
 <h2>pinguino gay abajo!!!</h2>
 
 <br>
@@ -77,6 +94,8 @@ height = 350
 title="pato gay" 
 alt="imagen de linux"
 src="imagenes/linux_os_logo_icon_134670.webp">
+
+<video src=""></video>
 
 
 <section id="preguntas de la audiencia"></section>
@@ -142,13 +161,13 @@ required>
         <label> Telefono:
             <input type="tel"
             name="phone"
-            placeholder="0414 --- ---"
+            placeholder="0414 000 00 00"
             required>
         </label>
     </div>
 </legend>
 </fieldset>
-<input type="submit" value="enviar mensaje">
+<button>enviar mensaje</button>
 
 
 
